@@ -43,6 +43,18 @@ shouldvdj: all
 	make COVERAGE="$(COVERAGE_OPTION)" -C $(VIDJIL_ALGO_SRC)/tests shouldvdj
 	@echo "*** All .should-vdj.fa tests passed"
 
+shouldvdj_generated: all
+	@echo
+	mkdir -p data/gen
+	cd germline ; python generate-recombinations.py
+	@echo
+	@echo "*** Launching generated .should-vdj-fa tests (and accepts errors)..."
+	-cd data/gen ; python ../../algo/tests/should-vdj-to-tap.py *.should-vdj.fa
+	@echo "*** All generated .should-vdj.fa tests finished"
+	python algo/tests/tap-stats.py data/gen/0-*.tap
+	python algo/tests/tap-stats.py data/gen/5-*.tap
+	@echo
+	@echo
 unit_browser:
 	make -C browser/test unit
 
