@@ -14,6 +14,7 @@ This changelog concerns the algorithmic part (C++) of Vidjil.
 	* Removed unused code parts as well as some files
 	* Streamlined flag processing in Makefiles
 	* New mechanism for some functional tests (make shouldvdj)
+	* New experimental tests from generated recombinations (make shouldvdj_generated)
 	* New and updated unit and functional tests
 
 2015-01-31  The Vidjil Team
